--- a/app/scss/pages/cases.scss
+++ b/app/scss/pages/cases.scss
@@ -2,6 +2,7 @@
   color: var(--bg-panel4d4e4f);
   background-color: var(--bg);
   padding-top: 50px;
+  display: none;
   &__buttons {
     padding-top: 36px;
     padding-bottom: 36px;
