--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,22 +1,24 @@
-// @mixin font-face($font-name, $path, $weight: normal, $style: normal) {
-//   @font-face {
-//     font-family: quote($font-name);
-//     src:
-//       url(#{$path}.woff) format("woff"),
-//       url(#{$path}.woff2) format("woff2");
-//     font-weight: $weight;
-//     font-style: $style;
-//   }
-// }
-// @include font-face('Open Sans', '../fonts/roboto-regular', 400, 'normal');
-// @include font-face('Open Sans', '../fonts/roboto-medium', 500, 'normal');
-// @include font-face('Open Sans', '../fonts/roboto-bold', 700, 'normal');
-
 @font-face {
   font-family: "RFDewi";
-  src: url(../fonts/RFDewi-Regular.woff2),
-  url(../fonts/RFDewi-Regular.woff);
+  src: url(../fonts/RFDewiExpanded-Regular.woff2),
+  url(../fonts/RFDewiExpanded-Regular.woff);
   font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RFDewi";
+  src: url(../fonts/RFDewiExtended-Bold.woff2),
+  url(../fonts/RFDewiExtended-Bold.woff);
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RFDewi";
+  src: url(../fonts/RFDewiExpanded-Black.woff2),
+  url(../fonts/RFDewiExpanded-Black.woff);
+  font-weight: 800;
   font-display: swap;
   font-style: normal;
 }
