--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -1,26 +1,65 @@
 .header {
-  padding-top: 60px;
   .container {
-    padding-left: 80px;
-    padding-right: 80px;
+    padding: 60px 0 45px;
+    max-width: 1760px;
+    margin: 0 auto;
+    position: relative;
+    // border-bottom: 1px solid var(--color--contrast-high);
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 1px;
+      background-color: var(--color-contrast-high);
+      left: 0;
+      bottom: 0;
+    }
   }
   &__top {
     position: relative;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 115px;
+  }
+  &__logo {
+    position: relative;
+    width: 159px;
+    height: 25px;
+    img {
+      position: absolute;
+    }
+  }
+  .header__logo_dark {
+    opacity: var(--opacity-logo-dark);
+  }
+  .header__logo_light {
+    opacity: var(--opacity-logo-light);
   }
   .nav {
+    text-align: right;
+    &__item {
+      margin-bottom: 7px;
+    }
     &__link {
       text-align: right;
       font-family: RFDewi, Arial, sans-serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 22px;
-      // color: var(--color--contrast-low);
-      color: #fff;
+      color: var(--color--contrast-low);
+      &.phone {
+        color: #4d4e4f;
+      }
     }
   }
   .switch-theme-btn {
     position: absolute;
+  }
+  &__title {
+    font-weight: 800;
+    font-size: 74px;
+    line-height: 89px;
+    color: var(--color--contrast-low);
+    font-family: RFDewi, Arial, sans-serif;
   }
 }
