--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,7 +5,10 @@
   --bg: #f5f5f5;
   --color-switch: #000000;
   --color--contrast-low: #282828;
-  --color-contrast-high: #4D4E4F;
+  --color-contrast-high: #4d4e4f;
+  --color-contrast-reverse: #c2c6cb;
+  --color--contrast: #282828;
+  --color--contrast-bgg: #c2c6cb;
   // --color-headings: #3d3d3d;
   --button-color-dark: #000000;
   --button-color-light: #000000;
@@ -14,6 +17,8 @@
   // --bg-panel4d4e4f: #4d4e4f;
   // --tab-color: #4d4e4f;
   // --filter-active: #ff562f;
+  --opacity-arrow-dark: 0;
+  --opacity-arrow-light: 1;
 }
 
 @supports (--css: variables) {
@@ -23,7 +28,10 @@
     --bg: #131313;
     --color-switch: #ffffff;
     --color--contrast-low: #d6d6d6;
-    --color-contrast-high: #C2C6CB;
+    --color-contrast-high: #c2c6cb;
+    --color-contrast-reverse: #4d4e4f;
+    --color--contrast: #4d4e4f;
+    --color--contrast-bgg: #272727;
     // --color-headings: #ff562f;
     --button-color-dark: #ffffff;
     --button-color-light: #ffffff;
@@ -32,6 +40,7 @@
     // --bg-panel4d4e4f: #ffffff;
     // --tab-color: #c2c6cb;
     // --filter-active: #c2c6cb;
-
+    --opacity-arrow-dark: 1;
+    --opacity-arrow-light: 0;
   }
 }
