--- a/app/scss/pages/services.scss
+++ b/app/scss/pages/services.scss
@@ -1,5 +1,10 @@
 .services {
-  padding-top: 33px;
+  .container {
+    padding: 366px 0 0 0;
+    position: relative;
+    max-width: 1760px;
+    margin: 0 auto;
+  }
   &__title {
     font-weight: 400;
     font-size: 28px;
@@ -9,6 +14,118 @@
     text-align: left;
     position: absolute;
     left: 50%;
+    top: 33px;
     transform: translateX(-55%);
+    color: var(--color-contrast-high);
+  }
+  .to-bottom {
+    &_left {
+      position: absolute;
+      left: 0;
+      top: 45px;
+      width: 136px;
+      height: 39px;
+      .arrows-dark {
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        gap: 21px;
+        opacity: var(--opacity-arrow-dark);
+      }
+      .arrows-light {
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        gap: 21px;
+        opacity: var(--opacity-arrow-light);
+      }
+    }
+    &_right {
+      position: absolute;
+      right: 0;
+      top: 45px;
+      width: 31px;
+      height: 39px;
+      .arrows-wrapper {
+        position: relative;
+      }
+      .arrow-dark {
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: var(--opacity-arrow-dark);
+      }
+      .arrow-light {
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: var(--opacity-arrow-light);
+      }
+    }
+  }
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item {
+    width: 512px;
+    height: 720px;
+    padding-top: 70px;
+    position: relative;
+    &-title {
+      font-weight: 800;
+      font-size: 25px;
+      line-height: 30px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      color: var(--color--contrast);
+    }
+    &-content {
+      padding-top: 37px;
+      padding-right: 34px;
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 1px;
+        top: 0;
+        left: 0;
+        background-color: var(--color--contrast-bgg);
+      }
+      &::after {
+        position: absolute;
+        content: "";
+        width: 1px;
+        height: 349px;
+        top: 0;
+        right: 0;
+        background-color: var(--color--contrast-bgg);
+      }
+    }
+    &-link {
+      width: 478px;
+      height: 557px;
+      display: inline-block;
+      border-radius: 10px;
+      overflow: hidden;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  &__names {
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  &__name{
+    padding: 27px 0;
+    color: var(--color--contrast);
   }
 }
