--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,8 @@
 @import "global";
 @import "pages/cases";
 @import "pages/services";
+@import "pages/portfolio";
+@import "pages/industry";
 @import 'header/header';
 @import 'small-blocks/switch';
 
