--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,6 +5,7 @@
   --bg: #f5f5f5;
   --color-switch: #000000;
   --color--contrast-low: #282828;
+  --color--contrast-low-2: #4d4e4f;
   --color-contrast-high: #4d4e4f;
   --color-contrast-reverse: #c2c6cb;
   --color--contrast: #282828;
@@ -28,6 +29,7 @@
     --bg: #131313;
     --color-switch: #ffffff;
     --color--contrast-low: #d6d6d6;
+    --color--contrast-low-2: #d6d6d6;
     --color-contrast-high: #c2c6cb;
     --color-contrast-reverse: #4d4e4f;
     --color--contrast: #4d4e4f;
