--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,5 +8,6 @@
 @import "pages/portfolio";
 @import "pages/industry";
 @import 'header/header';
+@import 'footer/footer';
 @import 'small-blocks/switch';
 
