--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,6 +7,7 @@
   --color--contrast-low: #282828;
   --color--contrast-low-2: #4d4e4f;
   --color-contrast-high: #4d4e4f;
+  --color-contrast-high2: #282828;
   --color-contrast-reverse: #c2c6cb;
   --color--contrast: #282828;
   --color--contrast-bgg: #c2c6cb;
@@ -31,6 +32,7 @@
     --color--contrast-low: #d6d6d6;
     --color--contrast-low-2: #d6d6d6;
     --color-contrast-high: #c2c6cb;
+    --color-contrast-high2: #c2c6cb;
     --color-contrast-reverse: #4d4e4f;
     --color--contrast: #4d4e4f;
     --color--contrast-bgg: #272727;
