--- a/app/scss/pages/industry.scss
+++ b/app/scss/pages/industry.scss
@@ -1,5 +1,6 @@
 .industry {
   padding-top: 250px;
+  padding-bottom: 240px;
   .container {
     padding-left: 80px;
     padding-right: 80px;
@@ -76,7 +77,7 @@
       transition: .3s;
     }
     .list-item__text {
-      font-weight: 700;
+      font-weight: 800;
       font-size: 32px;
       line-height: 38px;
       color: var(--color--contrast-low-2);
