--- a/app/scss/pages/services.scss
+++ b/app/scss/pages/services.scss
@@ -1,8 +1,7 @@
 .services {
   .container {
-    padding: 366px 0 0 0;
+    padding: 366px 80px 0 80px;
     position: relative;
-    max-width: 1760px;
     margin: 0 auto;
   }
   &__title {
@@ -21,7 +20,7 @@
   .to-bottom {
     &_left {
       position: absolute;
-      left: 0;
+      left: 80px;
       top: 45px;
       width: 136px;
       height: 39px;
@@ -44,7 +43,7 @@
     }
     &_right {
       position: absolute;
-      right: 0;
+      right: 80px;
       top: 45px;
       width: 31px;
       height: 39px;
@@ -70,7 +69,8 @@
     justify-content: space-between;
   }
   &__item {
-    width: 512px;
+    max-width: 512px;
+    width: 100%;
     padding-top: 70px;
     position: relative;
     &-title {
@@ -106,7 +106,8 @@
       }
     }
     &-link {
-      width: 478px;
+      max-width: 478px;
+      width: 100%;
       height: 557px;
       display: inline-block;
       border-radius: 10px;
@@ -123,11 +124,134 @@
     font-size: 18px;
     line-height: 22px;
   }
-  &__name{
+  &__name {
     padding: 27px 0;
     color: var(--color--contrast);
-    &:nth-child(2){
+    &:nth-child(2) {
       border-top: 1px solid var(--color--contrast-bgg);
+    }
+  }
+  &__inner-mobile {
+    position: relative;
+    .services__item {
+      position: absolute;
+      right: 0;
+      padding-top: 0;
+      display: none;
+      @media (max-width: 768px) {
+        display: block;
+      }
+    }
+    .services__tabs {
+      position: absolute;
+      left: 0;
+      top: 0;
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 26px;
+      padding-left: 25px;
+      border-left: 1px solid var(--color--contrast);
+    }
+    .services__tab{
+      margin-bottom: 16px;
+      color: var(--color--contrast);
+    }
+  }
+}
+.services.media {
+  @media (max-width: 1350px) {
+    .container {
+      padding-left: 30px;
+      padding-right: 30px;
+      padding-top: 238px;
+    }
+    .to-bottom_left {
+      left: 30px;
+    }
+    .to-bottom_right {
+      right: 30px;
+    }
+    .services__title {
+      font-size: 18px;
+      line-height: 150%;
+      max-width: 421px;
+    }
+  }
+  @media (max-width: 1200px) {
+    .services__item {
+      padding-top: 50px;
+      max-width: 292px;
+    }
+    .services__item-content {
+      padding-top: 20px;
+      padding-right: 20px;
+    }
+    .services__item-link {
+      max-width: 271px;
+      height: 316px;
+    }
+    .services__item-title {
+      font-size: 22px;
+      line-height: 26px;
+    }
+    .services__name {
+      padding: 14px 0;
+      font-size: 16px;
+      line-height: 19px;
+    }
+  }
+  @media (max-width: 830px) {
+    .services__title {
+      max-width: 328px;
+      font-size: 14px;
+      line-height: 150%;
+      top: 25px;
+    }
+    .to-bottom_left {
+      width: 83px;
+      height: 19px;
+      top: 34px;
+      .arrows-dark {
+        gap: 13px;
+      }
+      .arrows-light {
+        gap: 13px;
+      }
+      img {
+        width: 19px;
+        height: 24px;
+      }
+    }
+    .to-bottom_right {
+      width: 19px;
+      height: 24px;
+      top: 34px;
+      img {
+        width: 19px;
+        height: 24px;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .container {
+      padding-top: 109px;
+    }
+    .services__inner {
+      display: none;
+    }
+    .services__item {
+      padding-top: 0;
+      max-width: 400px;
+      &-content {
+        padding-top: 0;
+        &::before {
+          display: none;
+        }
+      }
+    }
+    .services__item-link {
+      max-width: 380px;
+      height: 443px;
     }
   }
 }
