--- a/app/scss/pages/portfolio.scss
+++ b/app/scss/pages/portfolio.scss
@@ -27,18 +27,28 @@
     border: 1px solid #4d4e4f;
     border-radius: 123px;
     cursor: pointer;
+    transition: .3s;
+    &.portfolio__nav--active{
+      color: var(--color-contrast-high);
+      border-color: var(--color-contrast-high);
+    }
   }
   &__inner {
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 36px;
+    &.portfolio--active{
+      display: flex;
+    }
   }
-  &__item-row{
+  &__item-row {
     display: flex;
     justify-content: space-between;
+    gap: 25px;
   }
   &__item {
     max-width: 570px;
+    width: 100%;
     height: 510px;
     position: relative;
     border-radius: 6px;
@@ -52,21 +62,21 @@
       font-weight: 800;
       font-size: 16.013px;
       line-height: 19px;
-      max-width: 415px;
+      max-width: 400px;
       width: 100%;
       position: absolute;
       left: 125px;
       top: 37px;
     }
     &-info {
-      height: 77px;
+      // height: 77px;
       position: relative;
       display: flex;
       border-radius: 100%;
       justify-content: space-between;
       gap: 20px;
-      &:hover{
-        .info-list__wrapper{
+      &:hover {
+        .info-list__wrapper {
           display: block;
         }
       }
@@ -76,6 +86,8 @@
         left: 27px;
       }
       &-img {
+        width: 77px;
+        height: 77px;
         border-radius: 100%;
         overflow: hidden;
         cursor: pointer;
@@ -86,12 +98,12 @@
         }
       }
     }
-    .info-list__wrapper{
+    .info-list__wrapper {
       display: none;
       padding-top: 10px;
     }
     .info-list {
-      transition: .3s;
+      transition: 0.3s;
       padding: 12px 16px 16px 16px;
       width: 240px;
       height: 168px;
@@ -101,7 +113,7 @@
         display: flex;
         margin-bottom: 10px;
         position: relative;
-        &__text-img{
+        &__text-img {
           position: absolute;
           left: -30px;
           bottom: 0;
@@ -130,6 +142,125 @@
           line-height: 12px;
         }
       }
+    }
+  }
+}
+.portfolio.media {
+  @media (max-width: 1760px) {
+    .portfolio__item-title {
+      max-width: 300px;
+    }
+    .portfolio__item {
+      height: 400px;
+    }
+  }
+  @media (max-width: 1522px) {
+    .portfolio__item-title {
+      font-size: 14px;
+      line-height: 17px;
+      max-width: 200px;
+    }
+  }
+  @media (max-width: 1350px) {
+    .container {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+  @media (max-width: 1330px) {
+    .portfolio__item {
+      height: 330px;
+    }
+    .portfolio__item-info-img {
+      width: 55px;
+      height: 55px;
+    }
+    .portfolio__item-info-wrapper {
+      left: 14px;
+    }
+    .info-list__wrapper {
+      padding-top: 0;
+    }
+    .info-list {
+      width: 200px;
+    }
+    .portfolio__item-title {
+      left: 80px;
+      top: 20px;
+    }
+  }
+  @media (max-width: 1024px) {
+    padding-top: 151px;
+    .portfolio__filters-row{
+      padding-top: 30px;
+      padding-bottom: 60px;
+    }
+    .portfolio__item {
+      max-width: 308px;
+      height: 275px;
+    }
+    .portfolio__item-row {
+      gap: 20px;
+    }
+    .portfolio__inner {
+      gap: 20px;
+    }
+    .portfolio__item-info-img {
+      width: 41px;
+      height: 41px;
+    }
+    .portfolio__item-info-wrapper {
+      top: 12px;
+    }
+    .portfolio__item-title {
+      left: 67px;
+    }
+  }
+  @media (max-width: 940px){
+    .portfolio__inner{
+      flex-direction: row;
+      justify-content: center;
+    }
+    .portfolio__item-row{
+      flex-direction: column;
+    }
+  }
+  @media (max-width: 768px){
+    .portfolio__item{
+      max-width: 340px;
+      height: 305px;
+    }
+    .portfolio__item-info-img {
+      width: 46px;
+      height: 46px;
+    }
+    .portfolio__item-info-wrapper {
+      top: 13px;
+      left: 16px;
+    }
+    .portfolio__item-title {
+      left: 75px;
+      top: 13px;
+    }
+    .portfolio__inner{
+      gap: 26px;
+      padding-top: 58px;
+    }
+    .portfolio__filters-row{
+      display: none;
+    }
+    .portfolio__tab-btn{
+      margin-bottom: 15px;
+    }
+  }
+  @media (max-width: 664px){
+    .portfolio__inner{
+      flex-direction: column;
+      align-items: center;
+      padding-top: 41px;
+    }
+    .portfolio__item{
+      height: 300px;
     }
   }
 }
