--- a/app/scss/pages/services.scss
+++ b/app/scss/pages/services.scss
@@ -151,10 +151,28 @@
       line-height: 26px;
       padding-left: 25px;
       border-left: 1px solid var(--color--contrast);
+      display: none;
+      @media (max-width: 768px) {
+        display: block;
+      }
+      @media (max-width: 658px) {
+        padding-left: 0;
+        border: none;
+      }
     }
-    .services__tab{
+    .services__tab {
       margin-bottom: 16px;
       color: var(--color--contrast);
+      transition: 0.3s;
+      &.services__tab--active {
+        color: #d6d6d6;
+      }
+      @media (max-width: 658px) {
+        padding-left: 0;
+        &::before {
+          display: none;
+        }
+      }
     }
   }
 }
@@ -235,6 +253,7 @@
   @media (max-width: 768px) {
     .container {
       padding-top: 109px;
+      height: 600px;
     }
     .services__inner {
       display: none;
@@ -242,6 +261,11 @@
     .services__item {
       padding-top: 0;
       max-width: 400px;
+      opacity: 0;
+      transition: 0.3s;
+      &.tab--active {
+        opacity: 1;
+      }
       &-content {
         padding-top: 0;
         &::before {
@@ -252,6 +276,91 @@
     .services__item-link {
       max-width: 380px;
       height: 443px;
+    }
+  }
+  @media (max-width: 630px) {
+    .container {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    .to-bottom_left {
+      left: 20px;
+    }
+    .to-bottom_right {
+      right: 20px;
+    }
+  }
+  @media (max-width: 600px) {
+    .container{
+      height: 487px;
+    }
+    .services__item {
+      max-width: 280px;
+    }
+    .services__item-link {
+      height: 300px;
+    }
+  }
+  @media (max-width: 584px) {
+    .to-bottom_left {
+      display: none;
+    }
+    .to-bottom_right {
+      display: none;
+    }
+  }
+  @media (max-width: 500px) {
+    .services__title {
+      top: 14px;
+    }
+    .container {
+      padding-top: 146px;
+    }
+    .services__tab {
+      font-size: 16px;
+      line-height: 19px;
+      margin-bottom: 15px;
+    }
+    .services__item-content {
+      padding-right: 0;
+      &::after {
+        display: none;
+      }
+    }
+    .services__names{
+      display: flex;
+    }
+    .services__name {
+      font-size: 14px;
+      line-height: 17px;
+      border: none;
+      padding: 13px 0;
+      margin-right: 15px;
+    }
+  }
+  @media (max-width: 440px){
+    .container{
+      padding-top: 14px;
+      height: 270px;
+    }
+    .services__title{
+      position: static;
+      margin-bottom: 90px;
+      transform: translateX(0);
+    }
+    .services__inner-mobile{
+      display: flex;
+    }
+    .services__item-link{
+      height: 160px;
+    }
+    .services__tabs{
+      position: static;
+      width: 125px;
+      margin-right: 52px;
+    }
+    .services__item{
+      max-width: 160px;
     }
   }
 }
