--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -11,6 +11,7 @@
   --color-contrast-reverse: #c2c6cb;
   --color--contrast: #282828;
   --color--contrast-bgg: #c2c6cb;
+  --form-color: #c2c6cb;
   // --color-headings: #3d3d3d;
   --button-color-dark: #000000;
   --button-color-light: #000000;
@@ -36,6 +37,7 @@
     --color-contrast-reverse: #4d4e4f;
     --color--contrast: #4d4e4f;
     --color--contrast-bgg: #272727;
+    --form-color: #1b1b1b;
     // --color-headings: #ff562f;
     --button-color-dark: #ffffff;
     --button-color-light: #ffffff;
