--- a/app/scss/footer/footer.scss
+++ b/app/scss/footer/footer.scss
@@ -29,13 +29,16 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    &:first-child {
+      margin-right: 86px;
+    }
   }
   &__form {
     width: 680px;
     border-radius: 24px;
     padding-left: 32px;
     padding-right: 32px;
-    background: #1b1b1b;
+    background: var(--form-color);
     &-wrapper {
       padding-top: 103px;
       display: flex;
@@ -139,9 +142,135 @@
       font-weight: 400;
       font-size: 18px;
       line-height: 22px;
-      a{
+      a {
         color: var(--color--contrast-low);
       }
+    }
+  }
+}
+.footer.media {
+  @media (max-width: 1540px) {
+    .footer__links {
+      flex-direction: column-reverse;
+      width: 295px;
+    }
+    .footer__links-row {
+      display: flex;
+      justify-content: space-between;
+      &:first-child {
+        flex-direction: row-reverse;
+      }
+    }
+    .footer__link {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      margin-right: 0;
+      margin-bottom: 8px;
+    }
+  }
+  @media (max-width: 1350px) {
+    .container {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+  @media (max-width: 900px) {
+    .footer__title {
+      font-size: 14px;
+      line-height: 150%;
+      max-width: 386px;
+    }
+    .footer__nav {
+      flex-direction: column;
+      &-item {
+        margin-bottom: 7px;
+      }
+    }
+    .footer__form {
+      width: 600px;
+    }
+  }
+  @media (max-width: 768px) {
+    .container {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+  @media (max-width: 750px) {
+    .footer__title {
+      display: none;
+    }
+    .footer__links {
+      padding-top: 15px;
+      align-items: start;
+    }
+    .footer__link {
+      margin-right: 24px;
+    }
+    .footer__form-wrapper {
+      padding-top: 50px;
+      margin-bottom: 90px;
+    }
+    .footer__bottom {
+      padding-bottom: 40px;
+    }
+  }
+  @media (max-width: 550px) {
+    .container {
+      padding-left: 0;
+      padding-right: 0;
+    }
+    .footer__inner {
+      padding-left: 20px;
+    }
+    .footer__form {
+      max-width: 100%;
+      border-radius: 0px;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 13px;
+    }
+    .footer__bottom {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    .form__inputs {
+      margin-bottom: 45px;
+    }
+    .form__input {
+      font-size: 14px;
+      line-height: 17px;
+      padding-bottom: 16px;
+      padding-top: 34px;
+    }
+    .form__bottom {
+      flex-direction: column;
+      align-items: start;
+    }
+    .form__buttons{
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 45px;
+    }
+    .add-file-label{
+      width: 204px;
+      margin-bottom: 13px;
+    }
+    .download{
+      width: 170px;
+    }
+    .send-btn {
+      margin-bottom: 15px;
+    }
+    .agreement {
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
+  @media (max-width: 375px){
+    .footer__logo{
+      display: none;
     }
   }
 }
