--- a/app/scss/pages/industry.scss
+++ b/app/scss/pages/industry.scss
@@ -32,14 +32,14 @@
       padding-top: 37px;
       padding-bottom: 28px;
       border-bottom: 1px solid var(--color-contrast-reverse);
-      &:hover{
-        .list-item__text{
+      &:hover {
+        .list-item__text {
           transform: translateX(85px);
         }
-        .list-item__number::before{
+        .list-item__number::before {
           opacity: 1;
         }
-        .list-item__count{
+        .list-item__count {
           color: var(--color--contrast-low-2);
         }
       }
@@ -56,7 +56,7 @@
       text-align: center;
       color: var(--color-contrast-high);
       position: relative;
-      &::before{
+      &::before {
         position: absolute;
         content: "";
         width: 63px;
@@ -65,7 +65,7 @@
         top: 50%;
         transform: translateY(-50%);
         background-image: url(../img/portfolio/arrow-list.svg);
-        transition: .3s;
+        transition: 0.3s;
         opacity: 0;
       }
     }
@@ -74,7 +74,7 @@
       font-size: 32px;
       line-height: 38px;
       color: var(--color-contrast-high);
-      transition: .3s;
+      transition: 0.3s;
     }
     .list-item__text {
       font-weight: 800;
@@ -82,7 +82,159 @@
       line-height: 38px;
       color: var(--color--contrast-low-2);
       position: relative;
-      transition: .3s;
+      transition: 0.3s;
+    }
+  }
+}
+.industry.media {
+  @media (max-width: 1750px) {
+    .industry__lists {
+      max-width: 800px;
+    }
+  }
+  @media (max-width: 1350px) {
+    padding-top: 150px;
+    .container {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+  @media (max-width: 1235px) {
+    .industry__title {
+      font-size: 18px;
+      line-height: 150%;
+      max-width: 221px;
+      margin-right: 87px;
+      padding-top: 30px;
+    }
+    .industry__list-left {
+      padding-top: 7px;
+    }
+    .industry__list-item {
+      padding: 23px 0;
+      &:hover{
+        .list-item__text{
+          transform: translateX(35px);
+        }
+      }
+    }
+    .list-item__number {
+      font-weight: 300;
+      font-size: 22px;
+      line-height: 26px;
+      width: 35px;
+      &::before{
+        width: 50px;
+        height: 20px;
+        right: -160%;
+        top: 50%;
+        transform: translateY(-50%);
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+    }
+    .list-item__text {
+      font-size: 22px;
+      line-height: 26px;
+    }
+    .list-item__count {
+      font-weight: 300;
+      font-size: 22px;
+      line-height: 26px;
+    }
+  }
+  @media (max-width: 930px) {
+    padding-top: 108px;
+    padding-bottom: 110px;
+    .industry__inner{
+      display: flex;
+      justify-content: space-between;
+    }
+    .industry__title {
+      font-size: 16px;
+      line-height: 150%;
+      margin-right: 0;
+      padding-top: 20px;
+    }
+    .industry__lists{
+      max-width: 450px;
+    }
+    .industry__list-left {
+      padding-top: 3px;
+    }
+    .industry__list-item {
+      padding: 23px 0 27px;
+    }
+    .list-item__number {
+      font-size: 18px;
+      line-height: 22px;
+      width: 29px;
+      margin-right: 13px;
+      &::before{
+        width: 35px;
+        height: 12px;
+        right: -150%;
+      }
+    }
+    .list-item__text {
+      font-size: 18px;
+      line-height: 22px;
+    }
+    .list-item__count {
+      font-size: 18px;
+      line-height: 22px;
+    }
+  }
+  @media (max-width: 768px){
+    .container{
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+  @media (max-width: 727px){
+    .industry__inner{
+      flex-direction: column;
+    }
+    .industry__lists{
+      max-width: 100%;
+    }
+  }
+  @media (max-width: 550px){
+    padding-top: 90px;
+    padding-bottom: 98px;
+    .industry__title {
+      font-size: 14px;
+      line-height: 21px;
+      padding-top: 15px;
+    }
+    .industry__list-left {
+      padding-top: 36px;
+    }
+    .industry__list-item {
+      padding: 14px 0;
+      &:hover{
+        .list-item__text{
+          transform: translateX(25px);
+        }
+      }
+    }
+    .list-item__number {
+      font-size: 14px;
+      line-height: 17px;
+      width: 22px;
+      &::before{
+        width: 25px;
+        height: 10px;
+        right: -150%;
+      }
+    }
+    .list-item__text {
+      font-size: 14px;
+      line-height: 17px;
+    }
+    .list-item__count {
+      font-size: 14px;
+      line-height: 17px;
     }
   }
 }
