--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -22,6 +22,20 @@
   // --filter-active: #ff562f;
   --opacity-arrow-dark: 0;
   --opacity-arrow-light: 1;
+  --filter-active: #ff562f;
+  --tab-color: #4d4e4f;
+
+  --bg-panel: #212527;
+  --color-headings: #3d3d3d;
+  --color-text: #ffffff;
+  --mask-color: transparent;
+  --mask-transform: translateX(-100%);
+  --mask-transform-mobile: translateX(0%) translateY(-100%);
+  --button-color-dark: #000000;
+  --button-color-light: #000000;
+  --opacity-switch-dark: 0;
+  --opacity-switch-light: 1;
+  --bg-panel4d4e4f: #4d4e4f;
 }
 
 @supports (--css: variables) {
@@ -48,5 +62,19 @@
     // --filter-active: #c2c6cb;
     --opacity-arrow-dark: 1;
     --opacity-arrow-light: 0;
+    --filter-active: #c2c6cb;
+    --tab-color: #c2c6cb;
+
+    --bg-panel: #ffffff;
+    --color-headings: #ff562f;
+    --color-text: #000000;
+    --mask-color: #303438;
+    --mask-transform: translateX(-18%);
+    --mask-transform-mobile: translateX(-4%) translateY(0%);
+    --button-color-dark: #ffffff;
+    --button-color-light: #ffffff;
+    --opacity-switch-dark: 1;
+    --opacity-switch-light: 0;
+    --bg-panel4d4e4f: #ffffff;
   }
 }
