--- a/app/scss/pages/cases.scss
+++ b/app/scss/pages/cases.scss
@@ -1,8 +1,10 @@
 .cases {
   color: var(--bg-panel4d4e4f);
   background-color: var(--bg);
-  padding-top: 50px;
-  // display: none;
+  .container{
+    padding-left: 0;
+    padding-right: 0;
+  }
   &__buttons {
     padding-top: 36px;
     padding-bottom: 36px;
@@ -17,9 +19,9 @@
     cursor: pointer;
     color: #4d4e4f;
     text-decoration: underline;
-    transform: scale(1.35, 1) translateX(14px);
+    // transform: scale(1.35, 1) translateX(14px);
     &:nth-child(2) {
-      transform: scale(1.35, 1) translateX(-12px);
+      // transform: scale(1.35, 1) translateX(-12px);
     }
   }
   &__tab {
@@ -42,17 +44,17 @@
     cursor: pointer;
     transition: 0.3s;
     &:first-child {
-      width: 313px;
+      width: 368px;
       span {
         display: inline-block;
-        transform: scale(1.32, 1) translateX(20px);
+        // transform: scale(1.32, 1) translateX(20px);
       }
     }
     &:nth-child(2) {
-      width: 156px;
+      width: 168px;
       span {
         display: inline-block;
-        transform: scale(1.32, 1) translateX(6px);
+        // transform: scale(1.32, 1) translateX(6px);
       }
     }
   }
@@ -106,7 +108,7 @@
         }
       }
       .name-tab__text {
-        transform: scale(1.32, 1) translateX(13px);
+        // transform: scale(1.32, 1) translateX(13px);
       }
     }
     .body-info {
@@ -128,7 +130,7 @@
           font-size: 22px;
           line-height: 26px;
           width: 296px;
-          transform: scale(1.37, 1) translateX(40px);
+          // transform: scale(1.37, 1) translateX(40px);
           margin-bottom: 70px;
           display: inline-block;
         }
@@ -136,34 +138,34 @@
           margin-bottom: 38px;
           &:nth-child(1) {
             .indicator-name {
-              transform: scale(1.32, 1) translateX(15px);
+              // transform: scale(1.32, 1) translateX(15px);
             }
             .indicator-value {
-              transform: scale(1.32, 1) translateX(37px);
+              // transform: scale(1.32, 1) translateX(37px);
             }
           }
           &:nth-child(2) {
             .indicator-name {
-              transform: scale(1.32, 1) translateX(15px);
+              // transform: scale(1.32, 1) translateX(15px);
             }
             .indicator-value {
-              transform: scale(1.32, 1) translateX(37px);
+              // transform: scale(1.32, 1) translateX(37px);
             }
           }
           &:nth-child(3) {
             .indicator-name {
-              transform: scale(1.32, 1) translateX(16px);
+              // transform: scale(1.32, 1) translateX(16px);
             }
             .indicator-value {
-              transform: scale(1.32, 1) translateX(37px);
+              // transform: scale(1.32, 1) translateX(37px);
             }
           }
           &:nth-child(4) {
             .indicator-name {
-              transform: scale(1.32, 1) translateX(23px);
+              // transform: scale(1.32, 1) translateX(23px);
             }
             .indicator-value {
-              transform: scale(1.32, 1) translateX(37px);
+              // transform: scale(1.32, 1) translateX(37px);
             }
           }
         }
@@ -171,7 +173,7 @@
           font-weight: 400;
           font-size: 14px;
           line-height: 17px;
-          transform: scale(1.32, 1) translateX(15px);
+          // transform: scale(1.32, 1) translateX(15px);
           margin-bottom: 10px;
           display: inline-block;
         }
@@ -179,7 +181,7 @@
           font-weight: 700;
           font-size: 25px;
           line-height: 30px;
-          transform: scale(1.32, 1) translateX(39px);
+          // transform: scale(1.32, 1) translateX(39px);
           width: 300px;
           span {
             display: inline-block;
@@ -205,7 +207,7 @@
           }
         }
         .works {
-          transform: scale(1.33, 1) translateX(92px);
+          // transform: scale(1.33, 1) translateX(92px);
         }
         .works__title {
           font-weight: 400;
@@ -264,7 +266,7 @@
       align-items: center;
       padding-left: 0;
       .works {
-        transform: scale(1.33, 1) translateX(0px);
+        // transform: scale(1.33, 1) translateX(0px);
       }
     }
     .body-info__right-img {
@@ -304,6 +306,9 @@
         margin-bottom: 0;
       }
     }
+    .btn-next {
+      right: 28%;
+    }
   }
   @media (max-width: 1242px) {
     .body-info__left {
@@ -314,9 +319,6 @@
     }
     .body-info__left {
       max-width: 400px;
-    }
-    .btn-next {
-      right: 30%;
     }
   }
   @media (max-width: 1188px) {
@@ -344,7 +346,7 @@
   }
   @media (max-width: 934px) {
     .btn-next {
-      right: 20%;
+      right: 25%;
     }
     .btn-prev {
       right: auto;
@@ -353,7 +355,7 @@
   }
   @media (max-width: 850px) {
     .btn-next {
-      right: 15%;
+      right: 20%;
     }
     .btn-prev {
       right: auto;
@@ -365,7 +367,7 @@
   }
   @media (max-width: 678px) {
     .btn-next {
-      right: 10%;
+      right: 15%;
     }
     .btn-prev {
       right: auto;
@@ -373,20 +375,18 @@
     }
   }
   @media (max-width: 668px) {
-    .container {
-      padding-left: 20px;
-      padding-right: 20px;
-    }
     .tab-filter {
       font-weight: 400;
       font-size: 14px;
       line-height: 17px;
       padding: 6px 16px;
       &:first-child {
-        width: 225px;
+        width: 230px;
+        margin-right: 10px;
       }
       &:nth-child(2) {
         width: 88px;
+        margin-right: 0;
       }
     }
     .tab-filters {
@@ -402,7 +402,6 @@
       max-width: 400px;
     }
     .body-info__right .works {
-      transform: scale(1.33, 1) translateX(21px);
       width: 335px;
     }
     .btn-next {
@@ -410,9 +409,6 @@
     }
     .btn-prev {
       left: 20px;
-    }
-    .tab-body__names .name-tab {
-      left: 45%;
     }
   }
   @media (max-width: 442px) {
@@ -459,7 +455,7 @@
     }
     .body-info__right .works {
       width: 250px;
-      transform: scale(1.33, 1) translateX(4px);
+      // transform: scale(1.33, 1) translateX(4px);
     }
     .indicator-value {
       width: 200px !important;
@@ -467,7 +463,7 @@
   }
   @media (max-width: 408px) {
     .tab-filter:first-child span {
-      transform: scale(1.32, 1) translateX(12%);
+      // transform: scale(1.32, 1) translateX(12%);
     }
     .body-info__left-title {
       width: 215px;
@@ -475,20 +471,20 @@
   }
   @media (max-width: 398px) {
     .tab-filter:first-child span {
-      transform: scale(1.32, 1) translateX(10%);
+      // transform: scale(1.32, 1) translateX(10%);
     }
   }
   @media (max-width: 388px) {
     .tab-filter:first-child span {
-      transform: scale(1.32, 1) translateX(8%);
+      // transform: scale(1.32, 1) translateX(8%);
     }
     .tab-filter:nth-child(2) span {
-      transform: scale(1.32, 1) translateX(2%);
+      // transform: scale(1.32, 1) translateX(2%);
     }
   }
   @media (max-width: 378px) {
     .tab-filter:first-child span {
-      transform: scale(1.32, 1) translateX(6%);
+      // transform: scale(1.32, 1) translateX(6%);
     }
   }
   @media (max-width: 374px) {
@@ -496,12 +492,31 @@
       width: 300px;
     }
     .tab-filter:first-child span {
-      transform: scale(1.32, 1) translateX(7%);
+      // transform: scale(1.32, 1) translateX(7%);
     }
   }
   @media(max-width: 374px){
     .tab-filter:first-child span {
-      transform: scale(1.32, 1) translateX(5%);
+      // transform: scale(1.32, 1) translateX(5%);
+    }
+  }
+  @media (max-width: 370px) {
+    .cases__tab-filters.tab-filters{
+      display: flex;
+      flex-direction: column;
+      .tab-filter {
+        &:first-child {
+          margin-bottom: 15px;
+        }
+      }
+    }
+  }
+  @media (max-width: 360px) {
+    .btn-next {
+      right: 0;
+    }
+    .btn-prev {
+      left: 0;
     }
   }
 }
