--- a/app/scss/pages/portfolio.scss
+++ b/app/scss/pages/portfolio.scss
@@ -1,5 +1,11 @@
 .portfolio {
   padding-top: 220px;
+  &-tab_{
+    display: none;
+    &.portfolio--active{
+      display: block;
+    }
+  }
   &__tab-row {
     display: flex;
     justify-content: space-between;
@@ -11,6 +17,11 @@
     line-height: 22px;
     color: #4d4e4f;
     margin-bottom: 36px;
+    transition: .3s;
+    &.portfolio__nav--active {
+      color: var(--filter-active) !important;
+      border-color: var(--filter-active) !important;
+    }
   }
   &__filters-row {
     padding-top: 36px;
@@ -27,17 +38,17 @@
     border: 1px solid #4d4e4f;
     border-radius: 123px;
     cursor: pointer;
-    transition: .3s;
-    &.portfolio__nav--active{
-      color: var(--color-contrast-high);
-      border-color: var(--color-contrast-high);
+    transition: 0.3s;
+    &.portfolio__nav--active {
+      color: var(--filter-active) !important;
+      border-color: var(--filter-active) !important;
     }
   }
   &__inner {
     display: none;
     flex-direction: column;
     gap: 36px;
-    &.portfolio--active{
+    &.portfolio--active {
       display: flex;
     }
   }
@@ -191,7 +202,7 @@
   }
   @media (max-width: 1024px) {
     padding-top: 151px;
-    .portfolio__filters-row{
+    .portfolio__filters-row {
       padding-top: 30px;
       padding-bottom: 60px;
     }
@@ -216,17 +227,17 @@
       left: 67px;
     }
   }
-  @media (max-width: 940px){
-    .portfolio__inner{
+  @media (max-width: 940px) {
+    .portfolio__inner {
       flex-direction: row;
       justify-content: center;
     }
-    .portfolio__item-row{
+    .portfolio__item-row {
       flex-direction: column;
     }
   }
-  @media (max-width: 768px){
-    .portfolio__item{
+  @media (max-width: 768px) {
+    .portfolio__item {
       max-width: 340px;
       height: 305px;
     }
@@ -242,25 +253,31 @@
       left: 75px;
       top: 13px;
     }
-    .portfolio__inner{
+    .portfolio__inner {
       gap: 26px;
       padding-top: 58px;
     }
-    .portfolio__filters-row{
+    .portfolio__filters-row {
       display: none;
     }
-    .portfolio__tab-btn{
+    .portfolio__tab-btn {
       margin-bottom: 15px;
     }
   }
-  @media (max-width: 664px){
-    .portfolio__inner{
+  @media (max-width: 664px) {
+    .portfolio__inner {
       flex-direction: column;
       align-items: center;
       padding-top: 41px;
     }
-    .portfolio__item{
+    .portfolio__item {
       height: 300px;
+    }
+  }
+  @media (max-width: 630px){
+    .container{
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 }
