--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,9 +3,12 @@
 @import "reset";
 @import "libs";
 @import "global";
+@import "modal";
 @import "pages/cases";
 @import "pages/services";
 @import "pages/portfolio";
+@import "pages/sertificats";
+@import "pages/prices";
 @import "pages/industry";
 @import 'header/header';
 @import 'footer/footer';
