--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -12,19 +12,14 @@
   --color--contrast: #282828;
   --color--contrast-bgg: #c2c6cb;
   --form-color: #c2c6cb;
-  // --color-headings: #3d3d3d;
   --button-color-dark: #000000;
   --button-color-light: #000000;
   --opacity-switch-dark: 0;
   --opacity-switch-light: 1;
-  // --bg-panel4d4e4f: #4d4e4f;
-  // --tab-color: #4d4e4f;
-  // --filter-active: #ff562f;
   --opacity-arrow-dark: 0;
   --opacity-arrow-light: 1;
   --filter-active: #ff562f;
   --tab-color: #4d4e4f;
-
   --bg-panel: #212527;
   --color-headings: #3d3d3d;
   --color-text: #ffffff;
@@ -36,6 +31,7 @@
   --opacity-switch-dark: 0;
   --opacity-switch-light: 1;
   --bg-panel4d4e4f: #4d4e4f;
+  --menu-btn: #282828;
 }
 
 @supports (--css: variables) {
@@ -52,19 +48,14 @@
     --color--contrast: #4d4e4f;
     --color--contrast-bgg: #272727;
     --form-color: #1b1b1b;
-    // --color-headings: #ff562f;
     --button-color-dark: #ffffff;
     --button-color-light: #ffffff;
     --opacity-switch-dark: 1;
     --opacity-switch-light: 0;
-    // --bg-panel4d4e4f: #ffffff;
-    // --tab-color: #c2c6cb;
-    // --filter-active: #c2c6cb;
     --opacity-arrow-dark: 1;
     --opacity-arrow-light: 0;
     --filter-active: #c2c6cb;
     --tab-color: #c2c6cb;
-
     --bg-panel: #ffffff;
     --color-headings: #ff562f;
     --color-text: #000000;
@@ -76,5 +67,6 @@
     --opacity-switch-dark: 1;
     --opacity-switch-light: 0;
     --bg-panel4d4e4f: #ffffff;
+    --menu-btn: #ffffff;
   }
 }
