--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -48,7 +48,7 @@
     span{
       width: 24px;
       height: 3px;
-      background: #ffffff;
+      background: var(--menu-btn);
       transition: .3s;
     }
     &.active{
