--- a/app/scss/pages/reviews.scss
+++ b/app/scss/pages/reviews.scss
@@ -11,11 +11,19 @@
     line-height: 42px;
     margin-bottom: 20px;
   }
-  &__inner {
+  &__inners {
     border-top: 1px solid #4d4e4f;
     padding-top: 50px;
     display: flex;
+    flex-direction: column;
+    gap: 70px;
+  }
+  &__inner {
+    display: flex;
     justify-content: space-between;
+    &.hide{
+      display: none;
+    }
   }
   &__column {
     display: flex;
@@ -37,6 +45,27 @@
         height: 100%;
       }
     }
+  }
+  .btn-wrapper{
+    padding: 50px 0;
+    text-align: center;
+  }
+  &__more-btn{
+    width: 200px;
+    height: 55px;
+    text-align: center;
+    line-height: 55px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #000;
+    border-radius: 123px;
+    transition: .3s;
+    cursor: pointer;
+    &:hover{
+      background: #d1d1d1;
+      color: #000;
+    }
+
   }
 }
 .modal__video {
