--- a/app/scss/pages/industry.scss
+++ b/app/scss/pages/industry.scss
@@ -32,6 +32,7 @@
       padding-top: 37px;
       padding-bottom: 28px;
       border-bottom: 1px solid var(--color-contrast-reverse);
+      cursor: url(../img/cursor.svg), pointer;
       &:hover {
         .list-item__text {
           transform: translateX(85px);
