--- a/app/scss/pages/services-new.scss
+++ b/app/scss/pages/services-new.scss
@@ -2,6 +2,9 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  @media (max-width: 744px){
+    height: 868px;
+  }
   &__img {
     position: absolute;
     object-fit: cover;
@@ -14,6 +17,9 @@
     align-items: center;
     justify-content: space-around;
     height: 100%;
+    @media (max-width: 744px){
+      height: 868px;
+    }
   }
   &__item {
     position: relative;
@@ -24,27 +30,36 @@
     color: var(--color--contrast);
     flex: 1;
     z-index: 2;
-    transition: .3s;
-    span{
+    transition: 0.3s;
+    @media (max-width: 744px) {
+      font-size: 40px;
+      line-height: 48px;
+    }
+    span {
       position: absolute;
-      transition: .5s;
+      transition: 0.5s;
       left: 50%;
       top: 50%;
       transform: translateX(-50%) translateY(-50%);
-      &:nth-child(1){
+      &:nth-child(1) {
         opacity: 1;
       }
-      &:nth-child(2){
+      &:nth-child(2) {
         opacity: 0;
         color: var(--menu-btn);
-        transform: translateX(calc(-50% + -60px)) translateY(calc(-50% + -20px));
+        font-size: 100px;
+        font-weight: 800;
+        @media (max-width: 744px) {
+          font-size: 55px;
+          line-height: 63px;
+        }
       }
     }
-    &:hover{
-      span:nth-child(1){
+    &:hover {
+      span:nth-child(1) {
         opacity: 0;
       }
-      span:nth-child(2){
+      span:nth-child(2) {
         opacity: 1;
       }
     }
