--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -40,3 +40,12 @@ body {
 .body-info.d-flex{
   display: flex!important;
 }
+.h-none{
+  height: 0!important;
+}
+.g-none{
+  gap: 0!important;
+}
+.m-none{
+  margin: 0!important;
+}
