--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,7 @@
 @import "pages/portfolio";
 @import "pages/sertificats";
 @import "pages/prices";
+@import "pages/clients";
 @import "pages/reviews";
 @import "pages/industry";
 @import 'header/header';
