--- a/app/scss/pages/reviews.scss
+++ b/app/scss/pages/reviews.scss
@@ -16,12 +16,13 @@
     padding-top: 50px;
     display: flex;
     flex-direction: column;
-    gap: 70px;
+    gap: 50px;
   }
   &__inner {
     display: flex;
     justify-content: space-between;
-    &.hide{
+    gap: 30px;
+    &.hide {
       display: none;
     }
   }
@@ -30,7 +31,7 @@
     flex-direction: column;
     max-width: 530px;
     width: 100%;
-    gap: 70px;
+    gap: 50px;
   }
   &__item {
     color: var(--color-contrast-high);
@@ -45,7 +46,7 @@
         width: 100%;
         height: 100%;
       }
-      .youtube-icon{
+      .youtube-icon {
         width: 100px;
         height: 70px;
         position: absolute;
@@ -54,12 +55,15 @@
         transform: translateX(-50%) translateY(-50%);
       }
     }
+    &-title {
+      height: 40px;
+    }
   }
-  .btn-wrapper{
+  .btn-wrapper {
     padding: 50px 0;
     text-align: center;
   }
-  &__more-btn{
+  &__more-btn {
     width: 200px;
     height: 55px;
     text-align: center;
@@ -68,22 +72,112 @@
     color: #fff;
     background-color: #000;
     border-radius: 123px;
-    transition: .3s;
+    transition: 0.3s;
     cursor: pointer;
-    &:hover{
+    &:hover {
       background: #d1d1d1;
       color: #000;
     }
-
+  }
+  .btn-wrapper_mobile {
+    padding-top: 28px;
+    text-align: center;
+    display: none;
+  }
+  &__more-btn_mobile {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--color-contrast-high2);
+    padding: 10px 24px;
+    border: 1px solid var(--color-contrast-high2);
+    border-radius: 123px;
+    cursor: pointer;
   }
 }
 .modal__video {
   max-width: 960px;
   width: 100%;
   height: 500px;
+  @media (max-width: 768px) {
+    height: 303px;
+  }
   iframe {
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+}
+.reviews.media {
+  @media (max-width: 1350px) {
+    .container {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+  }
+  @media (max-width: 1024px) {
+    .reviews__inner {
+      flex-wrap: wrap;
+    }
+    .reviews__column {
+      flex-direction: row;
+      max-width: 100%;
+    }
+    .reviews__item {
+      flex: 1;
+    }
+  }
+  @media (max-width: 768px) {
+    margin-bottom: 150px;
+    .reviews__inner {
+      justify-content: center;
+    }
+    .reviews__column {
+      flex-direction: column;
+      max-width: 530px;
+    }
+  }
+  @media (max-width: 500px) {
+    .reviews__inners {
+      height: 430px;
+      overflow: hidden;
+      padding-top: 27px;
+      gap: 0;
+      &.open{
+        height: auto;
+      }
+    }
+    .reviews__inner {
+      gap: 0;
+    }
+    .reviews__column {
+      gap: 0;
+    }
+    .btn-wrapper {
+      display: none;
+    }
+    .reviews__item-title {
+      display: none;
+    }
+    .reviews__item {
+      margin-bottom: 20px;
+    }
+    .reviews__item-img {
+      height: 191px;
+      margin-bottom: 0;
+    }
+    .youtube-icon {
+      width: 60px;
+      height: 44px;
+    }
+    .reviews__inner.reviews_hide {
+      gap: 0;
+      .reviews__column {
+        gap: 0;
+      }
+    }
+    .btn-wrapper_mobile{
+      display: block;
+    }
   }
 }
