--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 @import "libs";
 @import "global";
 @import "modal";
+@import "slick";
 @import "pages/cases";
 @import "pages/services";
 @import "pages/services-new";
