--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -22,34 +22,16 @@
     line-height: 19px;
     display: flex;
     align-items: center;
-    &-name{
+    &-name {
       width: 264px;
       position: relative;
       padding-bottom: 48px;
       display: block;
       flex-shrink: 0;
-      &:first-child{
+      &:first-child {
         padding-top: 48px;
       }
-      &::after{
-        position: absolute;
-        content: "";
-        right: 0;
-        top: 0;
-        width: 1px;
-        height: 100%;
-        background-color: #4d4e4f;
-      }
-    }
-    .lite,
-    .standart,
-    .premium,
-    .express{
-      width: 362px;
-      position: relative;
-      height: 100%;
-      padding-left: 37px;
-      &::after{
+      &::after {
         position: absolute;
         content: "";
         right: 0;
@@ -57,6 +39,76 @@
         width: 1px;
         height: 1000%;
         background-color: #4d4e4f;
+      }
+    }
+    .lite,
+    .standart,
+    .premium,
+    .express {
+      width: 362px;
+      position: relative;
+      height: 100%;
+      padding-left: 37px;
+      &::after {
+        position: absolute;
+        content: "";
+        right: 0;
+        top: -100px;
+        width: 1px;
+        height: 1000%;
+        background-color: #4d4e4f;
+      }
+    }
+    .express{
+      &::after{
+        right: -6px;
+      }
+    }
+    .rate {
+      display: flex;
+      flex-direction: column;
+      padding-left: 50px;
+      padding-top: 34px;
+      padding-bottom: 37px;
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "";
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #4d4e4f;
+      }
+      &__name {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        margin-bottom: 13px;
+        color: var(--list);
+        text-transform: uppercase;
+      }
+      &__price {
+        font-weight: 700;
+        font-size: 25px;
+        line-height: 30px;
+        color: var(--price);
+        margin-bottom: 13px;
+      }
+      &__info {
+        font-size: 16px;
+        line-height: 19px;
+        color: #4d4e4f;
+        &-link{
+          color: var(--color--contrast-low-white);
+          text-decoration: underline;
+        }
+      }
+      &.express{
+        &::before{
+          width: 110%;
+          right: -8px;
+        }
       }
     }
   }
