--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -33,6 +33,8 @@
   --bg-panel4d4e4f: #4d4e4f;
   --menu-btn: #282828;
   --list: #282828;
+  --price: #282828;
+  --color--contrast-low-white: #d6d6d6;
 }
 
 @supports (--css: variables) {
@@ -70,5 +72,7 @@
     --bg-panel4d4e4f: #ffffff;
     --menu-btn: #ffffff;
     --list: #a4a6a9;
+    --price: #ffffff;
+    --color--contrast-low-white: #ffffff;
   }
 }
