--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -1,5 +1,6 @@
 .modal-overlay-sertificat,
-.modal-overlay-video {
+.modal-overlay-video,
+.modal-overlay-order {
 	position: fixed;
 	left: 0;
 	top: 0;
