--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -26,6 +26,7 @@
       width: 264px;
       position: relative;
       padding-bottom: 48px;
+      padding-right: 24px;
       display: block;
       flex-shrink: 0;
       &:first-child {
@@ -55,12 +56,12 @@
         right: 0;
         top: -100px;
         width: 1px;
-        height: 1000%;
+        height: 3000%;
         background-color: #4d4e4f;
       }
     }
-    .express{
-      &::after{
+    .express {
+      &::after {
         right: -6px;
       }
     }
@@ -99,17 +100,88 @@
         font-size: 16px;
         line-height: 19px;
         color: #4d4e4f;
-        &-link{
+        &-link {
           color: var(--color--contrast-low-white);
           text-decoration: underline;
         }
       }
-      &.express{
-        &::before{
+      &.express {
+        &::before {
           width: 110%;
           right: -8px;
         }
       }
     }
+  }
+  &__buttons {
+    position: relative;
+    &::before {
+      position: absolute;
+      content: "";
+      right: 0;
+      top: 0;
+      width: 200%;
+      height: 1px;
+      background-color: #4d4e4f;
+    }
+    .lite,
+    .standart,
+    .premium,
+    .express {
+      padding-left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__btn {
+    padding: 16px 30px;
+    background: var(--color-contrast-high);
+    border-radius: 10px;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    cursor: pointer;
+  }
+}
+.modal-overlay-order {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.order-form {
+  max-width: 488px;
+  height: 493px;
+  padding: 33px 47px;
+  background: #ffffff;
+  border-radius: 5px;
+  &__title {
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 45px;
+  }
+  &__input {
+    width: 100%;
+    height: 42px;
+    border-bottom: 1px solid var(--color-contrast-high);
+    margin-bottom: 45px;
+  }
+  &__btn {
+    padding: 14px 46px;
+    font-size: 16px;
+    line-height: 19px;
+    color: #ffffff;
+    background: #282828;
+    border-radius: 123px;
+    margin-bottom: 11px;
+    cursor: pointer;
+  }
+  .agreement {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 141%;
+    width: 275px;
   }
 }
