--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -35,6 +35,7 @@
   --list: #282828;
   --price: #282828;
   --color--contrast-low-white: #d6d6d6;
+  --color--contrast-low-d6d6d6: #ffffff;
 }
 
 @supports (--css: variables) {
@@ -74,5 +75,6 @@
     --list: #a4a6a9;
     --price: #ffffff;
     --color--contrast-low-white: #ffffff;
+    --color--contrast-low-d6d6d6: #d6d6d6;
   }
 }
