--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -156,19 +156,52 @@
     cursor: pointer;
   }
   &-mobile {
+    .prices__slide-bottom{
+      &.slick-slide{
+        display: none;
+        &.slick-active{
+          display: block;
+        }
+      }
+      &.prices__slide-bottom.slide-bottom.slick-slide.slick-current.slick-active{
+        left: 0!important;
+      }
+    }
     .slide-bottom {
       &__name {
         color: var(--bg-panel4d4e4f);
+        font-weight: 400;
         font-size: 20px;
         line-height: 24px;
         text-transform: uppercase;
         margin-bottom: 27px;
       }
-      &__list{
+      &__list {
         background-color: var(--color--contrast-higher);
         border-radius: 10px;
         padding: 16px 18px 21px 15px;
-        color: #A4A6A9;
+        color: #a4a6a9;
+        margin-bottom: 38px;
+      }
+      &__item {
+        margin-bottom: 16px;
+      }
+      .development-time {
+        margin-top: 42px;
+      }
+      .installment{
+        margin-top: 42px;
+      }
+      &__btn {
+        display: block;
+        background: var(--color-contrast-high);
+        color: #1C1E21;
+        font-size: 20px;
+        line-height: 24px;
+        padding: 16px 38px;
+        border-radius: 10px;
+        margin: 0 auto 150px;
+        cursor: pointer;
       }
     }
   }
