--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -1,4 +1,5 @@
 .prices {
+  margin-bottom: 300px;
   .container {
     padding-left: 80px;
     padding-right: 80px;
@@ -315,6 +316,9 @@
         flex-shrink: 0;
       }
     }
+  }
+  @media (max-width: 768px){
+    margin-bottom: 150px;
   }
   @media (max-width: 500px) {
     .prices__title {
