--- a/app/scss/footer/footer.scss
+++ b/app/scss/footer/footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  padding-top: 300px;
   .container {
     padding-left: 80px;
     padding-right: 80px;
@@ -18,20 +17,23 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    &_whatsapp{
+    &_whatsapp {
       position: fixed;
       bottom: 47px;
       right: 80px;
     }
-    &_mail{
+    &_mail {
       position: fixed;
       bottom: 47px;
       left: 80px;
     }
-    &_telegram{
+    &_telegram {
       position: fixed;
       bottom: 47px;
       right: 234px;
+    }
+    &_phone {
+      display: none;
     }
   }
   &__form {
@@ -148,6 +150,15 @@
       }
     }
   }
+  .cookies {
+    padding: 0 20px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 141%;
+    color: #a4a6a9;
+    opacity: 0.8;
+    margin-bottom: 20px;
+  }
 }
 .footer.media {
   @media (max-width: 1540px) {
@@ -175,6 +186,59 @@
       padding-right: 30px;
     }
   }
+  @media (max-width: 1062px) {
+    .footer__link_mail {
+      left: 32px;
+      bottom: 25px;
+    }
+    .footer__link_telegram {
+      right: 32px;
+      bottom: 25px;
+    }
+    .footer__link_whatsapp {
+      right: 179px;
+      bottom: 25px;
+    }
+  }
+  @media (max-width: 980px) {
+    .footer__nav {
+      display: none;
+    }
+    .footer__logo {
+      width: 102px;
+      height: 16px;
+    }
+    .footer__bottom{
+      padding-bottom:30;
+    }
+    .footer__sub-bottom {
+      padding-top: 15px;
+      margin-left: 20px;
+      position: static;
+      display: flex;
+      max-width: 300px;
+      width: 100%;
+      flex-wrap: wrap;
+      margin-bottom: 150px;
+      border-top: 1px solid var(--color-contrast-high);
+      .footer__link_mail {
+        margin-bottom: 0;
+        position: static;
+      }
+      .footer__link_telegram {
+        margin-bottom: 0;
+        position: static;
+      }
+      .footer__link_whatsapp {
+        margin-bottom: 15px;
+        position: static;
+      }
+      .footer__link_phone {
+        margin-bottom: 15px;
+        display: inline;
+      }
+    }
+  }
   @media (max-width: 900px) {
     .footer__title {
       font-size: 14px;
@@ -192,7 +256,6 @@
     }
   }
   @media (max-width: 768px) {
-    padding-top: 150px;
     .container {
       padding-left: 20px;
       padding-right: 20px;
@@ -249,16 +312,16 @@
       flex-direction: column;
       align-items: start;
     }
-    .form__buttons{
+    .form__buttons {
       display: flex;
       flex-direction: column;
       margin-bottom: 45px;
     }
-    .add-file-label{
+    .add-file-label {
       width: 204px;
       margin-bottom: 13px;
     }
-    .download{
+    .download {
       width: 170px;
     }
     .send-btn {
@@ -267,11 +330,6 @@
     .agreement {
       font-size: 14px;
       line-height: 20px;
-    }
-  }
-  @media (max-width: 375px){
-    .footer__logo{
-      display: none;
     }
   }
 }
