--- a/app/scss/small-blocks/switch.scss
+++ b/app/scss/small-blocks/switch.scss
@@ -1,7 +1,8 @@
 .switch{
-  position: absolute;
+  position: fixed;
   top: 57px;
   right: 490px;
+  z-index: 100;
 }
 .buttons-wrapper {
   display: flex;
