--- a/app/scss/pages/sertificats.scss
+++ b/app/scss/pages/sertificats.scss
@@ -1,21 +1,21 @@
-.sertificats{
-  .container{
+.sertificats {
+  .container {
     padding-left: 80px;
     padding-right: 80px;
   }
-  &__title{
+  &__title {
     color: var(--bg-panel4d4e4f);
     font-size: 27px;
     font-weight: 400;
     line-height: 42px;
     margin-bottom: 20px;
   }
-  &__inner{
+  &__inner {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #4d4e4f;
   }
-  &__descr{
+  &__descr {
     padding-top: 37px;
     max-width: 343px;
     font-weight: 400;
@@ -23,18 +23,51 @@
     line-height: 150%;
     color: var(--color-contrast-high);
   }
-  &__img-wrapper{
+  &__img-wrapper {
     flex: 1;
     display: flex;
     justify-content: center;
     padding-top: 30px;
     padding-bottom: 30px;
   }
-  &__img{
+  &__img {
     max-width: 841px;
     height: 463px;
     overflow: hidden;
     flex: 1;
     cursor: pointer;
+  }
+}
+.sertificats.media {
+  @media (max-width: 1350px) {
+    .container {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+  @media (max-width: 1120px) {
+    .sertificats__inner {
+      flex-direction: column;
+    }
+    .sertificats__descr {
+      max-width: 100%;
+    }
+  }
+  @media (max-width: 768px) {
+    .sertificats__descr {
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 150%;
+      margin-bottom: 21px;
+    }
+    .sertificats__img-wrapper{
+      padding-top: 0;
+    }
+  }
+  @media (max-width: 500px){
+    .sertificats__img{
+      height: 208px!important;
+      overflow: hidden!important;
+    }
   }
 }
