--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,7 @@
 @import "pages/cases";
 @import "pages/services";
 @import "pages/services-new";
+@import "pages/team";
 @import "pages/portfolio";
 @import "pages/sertificats";
 @import "pages/prices";
